change some text

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
             <div class="info">
                 <img class="img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTHW8T9ogcL-sobYg9abmtAzB5fKBEOD3bsaA&s" alt="fart">
-                <div class="text">Young swaggy black male interacts with torta in a final fartbattle.</div>
+                <div class="text">Young male interacts with torta in a final fartbattle.</div>
             </div>
 
             <div class="info">
